--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ dnspython==2.3.0
 drf-social-oauth2==2.1.3
 drf-yasg==1.21.7
 ecdsa==0.18.0
-email-validator==2.0.0.post2
+email-validator==2.0.0
 Faker==19.6.2
 filelock==3.13.1
 filetype==1.2.0
