--- a/requirements.txt
+++ b/requirements.txt
@@ -1,176 +1,9 @@
-aiohttp==3.8.5
-aiosignal==1.3.1
-alembic==1.12.0
-asgiref==3.7.2
-async-timeout==4.0.3
-atomicwrites==1.4.1
-attrs==23.1.0
-autopep8==2.0.4
-backports.functools-lru-cache==2.0.0
-bcrypt==4.0.1
-black==24.1.1
-blinker==1.6.2
-blobfile==2.1.1
-cachetools==5.3.2
-caniusepython3==7.3.0
-certifi==2024.2.2
-cffi==1.16.0
-chardet==4.0.0
-charset-normalizer==3.3.2
-click==8.1.3
-cloudinary==1.38.0
-colorama==0.4.6
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==42.0.3
-dataclasses==0.6
-decorator==4.4.2
-defusedxml==0.7.1
-Deprecated==1.2.14
-deprecation==2.1.0
-distlib==0.3.8
-dj-rest-auth==5.0.2
 Django==5.0.2
-django-admin-log==0.2
-django-allauth==0.61.1
-django-cloudinary-storage==0.3.0
-django-cors-headers==4.3.1
-django-jazzmin==2.6.0
-django-oauth-toolkit==2.3.0
-django-rest-swagger==2.2.0
-django-sslserver==0.22
-django-templated-mail==1.1.1
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.1
-djoser==2.2.2
-dnspython==2.3.0
-drf-social-oauth2==2.1.3
-drf-yasg==1.21.7
-ecdsa==0.18.0
-email-validator==2.0.0.post2
-Faker==19.6.2
-filelock==3.13.1
+djangorestframework_simplejwt==5.3.1
+drf_yasg==1.21.7
 filetype==1.2.0
-flake8==6.1.0
-Flask==2.3.2
-Flask-Bcrypt==1.0.1
-Flask-Cors==4.0.0
-Flask-Login==0.6.2
-Flask-Mail==0.9.1
-flask-marshmallow==0.15.0
-Flask-Migrate==4.0.4
-Flask-MySQL==1.5.2
-Flask-MySQLdb==1.0.1
-Flask-SQLAlchemy==3.0.3
-Flask-WTF==1.1.1
-frozenlist==1.4.0
-google-auth==2.25.2
-google-auth-httplib2==0.1.1
-google-auth-oauthlib==1.1.0
-gotrue==0.2.0
-greenlet==2.0.2
-gunicorn==21.2.0
-h11==0.14.0
-httpcore==0.12.3
-httplib2==0.22.0
-httpx==0.16.1
-idna==2.10
-imageio==2.31.5
-imageio-ffmpeg==0.4.9
-inflection==0.5.1
-iniconfig==2.0.0
-itsdangerous==2.1.2
-itypes==1.2.0
-Jinja2==3.1.2
-jwcrypto==1.5.1
-libmagic==1.0
-llvmlite==0.41.0
-lxml==4.9.4
-Mako==1.2.4
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-marshmallow-sqlalchemy==0.29.0
-mccabe==0.7.0
-more-itertools==10.1.0
-moviepy==1.0.3
-mpmath==1.3.0
-multidict==6.0.4
-mypy-extensions==1.0.0
-mysql-connector-python==8.0.33
-mysqlclient==2.2.4
-networkx==3.1
-numba==0.58.0
-numpy==1.25.2
-oauthlib==3.2.2
-openai==0.28.1
-openai-whisper @ git+https://github.com/openai/whisper.git@0a60fcaa9b86748389a656aa013c416030287d47
-openapi-codec==1.3.2
-packaging==23.2
-pathspec==0.12.1
-pillow==10.2.0
-pipenv==2023.9.1
-platformdirs==4.1.0
-pluggy==1.3.0
-postgrest-py==0.4.0
-proglog==0.1.10
-protobuf==3.20.3
-psycopg2==2.9.9
-psycopg2-binary==2.9.5
-py==1.11.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycodestyle==2.11.0
-pycparser==2.21
-pycryptodomex==3.20.0
-pyflakes==3.1.0
-PyJWT==2.8.0
-PyMySQL==1.1.0
-pyotp==2.9.0
-pyparsing==3.1.1
-pytest==6.2.5
-python-dateutil==2.8.2
-python-decouple==3.8
-python-dotenv==1.0.0
-python-jose==3.3.0
-python-magic==0.4.27
-python-magic-bin==0.4.14
-python3-openid==3.2.0
-pytz==2024.1
-PyYAML==6.0.1
-realtime-py==0.1.3
-regex==2023.8.8
+Pillow==10.3.0
+python-dotenv==1.0.1
 reportlab==4.0.9
-requests==2.25.1
-requests-oauthlib==1.3.1
-rfc3986==1.5.0
-rsa==4.9
-sib-api-v3-sdk==7.6.0
-simplejson==3.19.2
-six==1.16.0
-sniffio==1.3.0
-social-auth-app-django==5.4.0
-social-auth-core==4.5.1
-SpeechRecognition==3.10.0
-SQLAlchemy==2.0.16
-sqlparse==0.4.4
-supabase-py==0.0.2
-sympy==1.12
-tiktoken==0.1.1
-toml==0.10.2
-tomli==2.0.1
-toposort==1.10
-torch==2.0.1
-tqdm==4.66.1
-typing_extensions==4.9.0
-tzdata==2024.1
-uritemplate==4.1.1
-urllib3==1.26.18
-vermin==1.6.0
-virtualenv==20.25.0
-virtualenvwrapper-win==1.2.7
-websockets==9.1
-Werkzeug==2.3.4
-whitenoise==6.6.0
-wrapt==1.16.0
-WTForms==3.0.1
-yarl==1.9.2
+Requests==2.32.3
+sib_api_v3_sdk==7.6.0
