--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ cloudinary==1.38.0
 Django==5.0.2
 djangorestframework_simplejwt==5.3.1
 djangorestframework==3.14.0
+django-cloudinary-storage==0.3.0
+django-cors-headers==4.3.1
 drf_yasg==1.21.7
 filetype==1.2.0
 gunicorn==21.2.0
