--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework_simplejwt==5.3.1
 djangorestframework==3.14.0
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.3.1
+drf-spectacular==0.27.2
 drf_yasg==1.21.7
 filetype==1.2.0
 gunicorn==21.2.0
